# glasses-tryon-studio

.github/workflows/: build-windows-portable.yml
app/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  Studio.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.jso
backend/: main.py  requirements.txt
scripts/: Start.bat  Stop.bat
